# controller-liberator

./: .gitignore  README.md  README_zh-CN.md  README_zh-TW.md  context.py  detector.py  detector_tang.py  gamepad.py  gui copy.py  gui.py  gui_demo.py  main.py  mapping.py  mapping_test.py  presets.py  presets_fang.py  requirements.txt  sysconfig.ini  test_gui.py  utils.py
.venv-py312/: pyvenv.cfg
Presets/: common-car.json  sports-car.json  test.json
Test_Scripts/: show_brake_icon_test.py  show_break_test.py  test_gui.py
control/: controller.py  gamepad.py  keyboard.py
package_build/: README.md  pyproject.toml
package_build/keyboard_liberator/: __init__.py  context.py  detector.py  gui.py  main.py  mapping.py  presets.py  utils.py
package_build/keyboard_liberator/control/: gamepad.py  keyboard.py
package_build/keyboard_liberator/resources/: sysconfig.ini
package_build/keyboard_liberator/tkparam/: tk_param.py
tkparam/: test_scalar.py  test_window.py  tk_param.py  tk_param_window.py
